Changes for 1.3.4:

 - NetBSD compilation fixes (Alexei)

Changes for 1.3.3:

 - support of hysteresis (Alexei)
 - support of macro {TRIGGER.VALUE} in trigger expressions (Alexei)
 - added new table 'ids' which will store last IDs for all tables (Alexei)
 - added highlighting for second level menu (Eugene)
 - added "Clone" functionality (Eugene)
 - added Watchdog for database availability (Alexei)
 - developed configuration of Jabber messaging (Eugene)
 - split hostname and DNS name in frontend (Eugene)
 - improved detection of runned ZABBIX applications (Eugene)
 - fixed large SQLs calling (Eugene)
 - new templates Unix_t, Windows_t, Standalone_t (Alexei)
 - added media_type.username, media_type.passwd (Alexei)
 - added hosts.dns. Host name is for informational purposes only. (Alexei)
 - new command line parameters for zabbix_sender (Andrey)
 - added support of system.boottime (Andrey)
 - fixed permissions for triggers (Eugene)
 - developed 'mass update' functionality for items (Eugene)
 - changed type of items.prevorgvalue to preserve data precision (Alexei)
 - added possibility of hostname using (Eugene)
 - new communication library and protocol (Alexei)
 - developed configuration interface of http monitoring (Eugene)
 - added support of 'eventlog[*]' for WinXX (Eugene)
 - fixed comilation on FreeBSD (Eugene)
 - misc HP-UX fixes (Alexei)
 - misc FreeBSD fixes (Alexei)
 - fixed false "Database corrupted" situations (Alexei)
 - item key length increased to 255 characters (Eugene)
 - fixed popups for screen of graph editing (Eugene)
 - improved databases determination of configuration script (Eugene)
 - new server parameter 'StartHTTPPollers' (Alexei)

Changes for 1.3.2:

 - removed support of parameter DisablePinger (Alexei)
 - fixed SQL statements for PostgreSQL (Eugene)
 - fixed printing of stdout/stderr (Eugene)
 - fixed permission system for empty maps (Eugene)
 - improved sqlite3 database support (Eugene)
 - developed simple trigger expression editor (Eugene)